--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,19 @@
+main {
+  width: 100%;
+}
 
-body {
+#search-container {
+  margin-top: 10px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-evenly;
   align-items: center;
+  width: 100%;
+}
+
+#hn-results-container {
+  margin-top: 10px;
+  background-color: aqua;
+  min-height: 60px;
+  width: 100%;
 }
