--- a/src/Components/SearchButton/SearchButton.css
+++ b/src/Components/SearchButton/SearchButton.css
@@ -2,7 +2,7 @@ input[type=submit] {
     background-color: #FF6600;
     color: #FFF;
     height: 40px;
-    width: 100%;
+    /* min-width: 10%; */
     /* padding: 10% 15%; */
     border-radius: 100px;
     border: none;
